src/objects/Assessment__c.object
<CustomObject>
    <fields>
        <fullName>AdditionalInformation__c</fullName>
        <label>Additional Information</label>
        <picklist>
            <picklistValues>
                <fullName>Take Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Class</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>AverageGrade__c</fullName>
        <formula>TotalGrade__c /  NumberOfGrades__c</formula>
        <label>Average Grade</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MaxGrade__c</fullName>
        <label>Max Grade</label>
        <summarizedField>Grade__c.Grade__c</summarizedField>
        <summaryForeignKey>Grade__c.Assessment__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MinGrade__c</fullName>
        <label>Min Grade</label>
        <summarizedField>Grade__c.Grade__c</summarizedField>
        <summaryForeignKey>Grade__c.Assessment__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfGrades__c</fullName>
        <label>Number of Grades</label>
        <summaryForeignKey>Grade__c.Assessment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ReTake__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-Take</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TimeGiven__c</fullName>
        <label>Time Given</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalGrade__c</fullName>
        <label>Total Grade</label>
        <summarizedField>Grade__c.Grade__c</summarizedField>
        <summaryForeignKey>Grade__c.Assessment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Assessment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <recordTypes>
        <fullName>Homework</fullName>
        <active>true</active>
        <label>Homework</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project</fullName>
        <active>true</active>
        <label>Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quiz</fullName>
        <active>true</active>
        <label>Quiz</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>